NOTFORMERGE: BUGFIX: fixed overlapping buttons in modeladmin. From r96884
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@96962 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -117,10 +117,9 @@ body.ModelAdmin #statusMessage {
 
 /* Form */
 body.ModelAdmin #right .ajaxActions {
-	position: fixed !important;
 	position: absolute;
-	right: 30px !important;
-	bottom: 35px !important;
+	right: 2px;
+	bottom: -25px;
 }
 
 	body.ModelAdmin #Form_EditForm_action_goBack {
